welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not found: type color
	var T = new Array[color] (wh); // on déclare le tableau de longueur wh
                          ^